--- a/act1.html
+++ b/act1.html
@@ -855,9 +855,9 @@ window.zadConfig={"OOPsAppendSuffix": true, "lazy": false, "amazon": false, "dep
 <p>Speaking of controls, lets head over to the General Hints and Tips so we can dive into the controls in more detail.</p>
 
 <div align="center" class="container">
-    <a href="index.html" class="myButton" onclick="interstitialAd()">BACK</a>
+    <a href="index.html" class="myButton" id="myButton">BACK</a>
     <span>
-        <a href="act2.html" class="myButton" onclick="interstitialAd()">NEXT</a>
+        <a href="act2.html" class="myButton" id="myButton">NEXT</a>
     </span>
 </div>    </article>
 
